[Marcus] - feito parte e classes para comunicação de apis adicionada funcionalidade e modelo para favoritos e gerada nova documentação
